Fixed toolbar being overlapped by card on small devices

--- a/src/app/pages/cards/pages/cards/cards.component.scss
+++ b/src/app/pages/cards/pages/cards/cards.component.scss
@@ -113,5 +113,10 @@
 }
 
 .background {
-  z-index: 0;
+  @media #{$breakpoint-medium} {
+    z-index: 0;
+  }
+  @media #{$breakpoint-large} {
+    z-index: 0;
+  }
 }
